# Clinical-o1

./: .gitignore  PLAN.md  README.md  pyproject.toml
configs/evaluation/: qwen25_7b_mcq_4090.yaml
configs/sft/: qwen25_7b_qlora_4090.yaml
data/manifests/: english_mainline.json
docs/: stage2_base_evaluation.md  stage3_sft_4090.md
reports/: artifact_inventory.json  m0_dry_run.json  runtime_environment.json
reports/data/: contamination_report.json  contamination_report.md  data_quality_report.json  data_quality_report.md
src/medical_grpo/: __init__.py  __main__.py  cli.py  dry_run.py  paths.py
src/medical_grpo/data/: __init__.py  contamination.py  pipeline.py  quality.py  schema.py  sources.py
src/medical_grpo/evaluation/: __init__.py  compare.py  config.py  contract.py  data.py  dry_run.py  metrics.py  modeling.py  parsing.py  prompts.py  runner.py
src/medical_grpo/sft/: __init__.py  config.py  data.py  diagnostics.py  dry_run.py  modeling.py  trainer.py
src/medical_grpo/tracking/: __init__.py  artifacts.py  runtime.py
tests/integration/: test_cli.py  test_sft_trl_config.py
tests/unit/: test_artifacts.py  test_contamination.py  test_evaluation_compare.py  test_evaluation_config.py  test_evaluation_metrics.py  test_evaluation_parsing.py  test_pipeline.py  test_quality.py  test_schema.py  test_sft_config.py  test_sft_data.py
