[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clinical-o1"
version = "0.1.0"
description = "English medical reasoning alignment with QLoRA, PRM, GRPO, and DAPO"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
  "datasets==5.0.0",
  "huggingface-hub>=0.36.0,<1.0.0",
  "numpy>=1.26,<3.0",
  "scikit-learn==1.7.2",
  "torch>=2.8.0,<3.0.0",
  "transformers==4.57.6",
]

[project.optional-dependencies]
dev = [
  "pytest==9.1.1",
  "ruff==0.15.20",
]
[project.scripts]
clinical-o1 = "medical_grpo.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
